--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,49 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tv_title"
+            android:text="@string/tv_title"
+            style="@style/TitleStyle"/>
+
+        <Button
+            android:id="@+id/btn_spotify_streamer_app"
+            android:text="@string/btn_spotify_streamer_app"
+            style="@style/ButtonStyle"/>
+
+        <Button
+            android:id="@+id/btn_scores_app"
+            android:text="@string/btn_scores_app"
+            style="@style/ButtonStyle"/>
+
+        <Button
+            android:id="@+id/btn_library_app"
+            android:text="@string/btn_library_app"
+            style="@style/ButtonStyle"/>
+
+        <Button
+            android:id="@+id/btn_build_it_bigger_app"
+            android:text="@string/btn_build_it_bigger_app"
+            style="@style/ButtonStyle"/>
+
+        <Button
+            android:id="@+id/btn_xyz_reader_app"
+            android:text="@string/btn_xyz_reader_app"
+            style="@style/ButtonStyle"/>
+
+        <Button
+            android:id="@+id/btn_capstone_app"
+            android:text="@string/btn_capstone_app"
+            style="@style/ButtonStyle"/>
+
+    </LinearLayout>
+</ScrollView>
