feat: Create layout for tablets

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,19 +5,35 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <!-- Style for title textview -->
-    <style name="TitleStyle">
+    <!-- Style for title textview in phone layout -->
+    <style name="TitlePhoneStyle">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_height">56dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textAppearance">?android:textAppearanceLarge</item>
     </style>
 
-    <!-- Style for buttons -->
-    <style name="ButtonStyle">
-        <item name="android:layout_width">200dp</item>
+    <!-- Style for title textview in tablet layout -->
+    <style name="TitleTabStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">64dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textAppearance">?android:textAppearanceLarge</item>
+    </style>
+
+    <!-- Style for buttons in phone layout -->
+    <style name="ButtonPhoneStyle">
+        <item name="android:layout_width">220dp</item>
         <item name="android:layout_height">56dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
+    <!-- Style for buttons in tablet layout -->
+    <style name="ButtonTabStyle">
+        <item name="android:layout_width">240dp</item>
+        <item name="android:layout_height">64dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginTop">16dp</item>
     </style>
 
 </resources>
