--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,37 +13,37 @@
         <TextView
             android:id="@+id/tv_title"
             android:text="@string/tv_title"
-            style="@style/TitleStyle"/>
+            style="@style/TitlePhoneStyle"/>
 
         <Button
             android:id="@+id/btn_spotify_streamer_app"
             android:text="@string/btn_spotify_streamer_app"
-            style="@style/ButtonStyle"/>
+            style="@style/ButtonPhoneStyle"/>
 
         <Button
             android:id="@+id/btn_scores_app"
             android:text="@string/btn_scores_app"
-            style="@style/ButtonStyle"/>
+            style="@style/ButtonPhoneStyle"/>
 
         <Button
             android:id="@+id/btn_library_app"
             android:text="@string/btn_library_app"
-            style="@style/ButtonStyle"/>
+            style="@style/ButtonPhoneStyle"/>
 
         <Button
             android:id="@+id/btn_build_it_bigger_app"
             android:text="@string/btn_build_it_bigger_app"
-            style="@style/ButtonStyle"/>
+            style="@style/ButtonPhoneStyle"/>
 
         <Button
             android:id="@+id/btn_xyz_reader_app"
             android:text="@string/btn_xyz_reader_app"
-            style="@style/ButtonStyle"/>
+            style="@style/ButtonPhoneStyle"/>
 
         <Button
             android:id="@+id/btn_capstone_app"
             android:text="@string/btn_capstone_app"
-            style="@style/ButtonStyle"/>
+            style="@style/ButtonPhoneStyle"/>
 
     </LinearLayout>
 </ScrollView>
