--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,6 +26,8 @@
         <item name="android:layout_width">220dp</item>
         <item name="android:layout_height">56dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:background">@drawable/button_all_apps</item>
     </style>
 
     <!-- Style for buttons in tablet layout -->
@@ -34,6 +36,7 @@
         <item name="android:layout_height">64dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:layout_marginTop">16dp</item>
+        <item name="android:background">@drawable/button_all_apps</item>
     </style>
 
 </resources>
