--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,75 +4,76 @@
     android:layout_height="match_parent"
     android:background="@color/my_portfolio_app_grey"
     tools:context=".MainActivity">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
-
         <TextView
             android:id="@+id/tv_title"
             android:text="@string/tv_title"
             style="@style/TitlePhoneStyle"/>
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center">
-
             <Button
-                android:id="@+id/btn_spotify_streamer_app"
-                android:text="@string/btn_spotify_streamer_app"
+                android:id="@+id/btn_modern_art"
+                android:text="@string/label_btn_modern_art"
                 style="@style/ButtonPhoneStyle"
                 android:layout_marginRight="4dp"/>
-
             <Button
-                android:id="@+id/btn_scores_app"
-                android:text="@string/btn_scores_app"
+                android:id="@+id/btn_popular_movies"
+                android:text="@string/label_btn_popular_movies"
                 style="@style/ButtonPhoneStyle"/>
-
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center">
-
             <Button
-                android:id="@+id/btn_library_app"
-                android:text="@string/btn_library_app"
+                android:id="@+id/btn_alexandria"
+                android:text="@string/label_btn_alexandria"
                 style="@style/ButtonPhoneStyle"
                 android:layout_marginRight="4dp"/>
-
             <Button
-                android:id="@+id/btn_build_it_bigger_app"
-                android:text="@string/btn_build_it_bigger_app"
+                android:id="@+id/btn_football_scores"
+                android:text="@string/label_btn_football_scores"
                 style="@style/ButtonPhoneStyle"/>
-
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center">
-
             <Button
-                android:id="@+id/btn_xyz_reader_app"
-                android:text="@string/btn_xyz_reader_app"
+                android:id="@+id/btn_build_it_bigger"
+                android:text="@string/label_btn_build_it_bigger"
                 style="@style/ButtonPhoneStyle"
                 android:layout_marginRight="4dp"/>
-
             <Button
-                android:id="@+id/btn_capstone_app"
-                android:text="@string/btn_capstone_app"
+                android:id="@+id/btn_xyz_reader"
+                android:text="@string/label_btn_xyz_reader"
+                style="@style/ButtonPhoneStyle"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            <Button
+                android:id="@+id/btn_go_ubiquitous"
+                android:text="@string/label_btn_go_ubiquitous"
+                style="@style/ButtonPhoneStyle"
+                android:layout_marginRight="4dp"/>
+            <Button
+                android:id="@+id/btn_news_bytes"
+                android:text="@string/label_btn_news_bytes"
                 style="@style/ButtonPhoneStyle"
                 android:background="@drawable/button_capstone_app"
                 android:textColor="@color/my_portfolio_app_white"/>
-
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
