--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -11,7 +11,7 @@
         android:padding="48dp">
         <TextView
             android:id="@+id/tv_title"
-            android:text="@string/tv_title"
+            android:text="@string/label_title"
             style="@style/TitlePhoneStyle"/>
         <LinearLayout
             android:layout_width="wrap_content"
